[gd_scene load_steps=10 format=3 uid="uid://3smw8fu3bhbc"]

[ext_resource type="Texture2D" uid="uid://b2h3ogxpyjmkw" path="res://assets/sprites/slime_green.png" id="1_asdym"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_jvle4"]
[ext_resource type="PackedScene" uid="uid://c0qcegvxt0gpw" path="res://scenes/hurtzone.tscn" id="2_6nxdm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5smy2"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hs522"]
atlas = ExtResource("1_asdym")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ve1q"]
atlas = ExtResource("1_asdym")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kokwh"]
atlas = ExtResource("1_asdym")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_etpe8"]
atlas = ExtResource("1_asdym")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_lu8g5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs522")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ve1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kokwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etpe8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Slime" type="Node2D"]
script = ExtResource("1_jvle4")

[node name="Hurtzone" parent="." instance=ExtResource("2_6nxdm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtzone"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_5smy2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_lu8g5")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.0786634

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(10, 0)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(11, 9)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-10, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-11, 10)

[connection signal="body_entered" from="Hurtzone" to="." method="_on_hurtzone_body_entered"]
[connection signal="body_entered" from="Hurtzone" to="Hurtzone" method="_on_body_entered"]
[connection signal="damaged" from="Hurtzone" to="." method="_on_hurtzone_damaged"]
